--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -36,7 +36,7 @@
         }
     }
 
-    // Srack Grid Columns
+    // Stack Grid Columns
     #home-a .specials,
     #home-b .stats,
     #home-c .process,
